codepkg/objects/Page_Field__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Channel_Event_Config__c</fullName>
        <label>Channel Event Config</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Channel_Event_Name__c</fullName>
        <label>Channel Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column_Size__c</fullName>
        <label>Column Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                    <default>true</default>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Controller_Field__c</fullName>
        <label>Controller Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Label__c</fullName>
        <label>Display Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Table_Columns__c</fullName>
        <label>Document Table Columns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Upload_Additional_Config__c</fullName>
        <label>Document Upload Additional Config</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enable_Channel_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Channel Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Field_Formula__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Field Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Field_Specific_Doc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Field Specific Doc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enabled_Maximum_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled Maximum Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enabled_Minimum_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled Minimum Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Criteria_value__c</fullName>
        <label>Field Criteria value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Formula_Configuration__c</fullName>
        <inlineHelpText>Sample: [{
	&quot;fields&quot;: &quot;FieldAPI_1__c,FieldAPI_2__c&quot;,
	&quot;valueAssignTo&quot;: &quot;FieldAPI_3__c&quot;,
	&quot;formula&quot;: &quot;FieldAPI_1__c * FieldAPI_2__c)/100&quot;
},
 {
	&quot;fields&quot;: &quot;FieldAPI_1__c,FieldAPI_2__c&quot;,
	&quot;valueAssignTo&quot;: &quot;FieldAPI_3__c&quot;,
	&quot;formula&quot;: &quot;FieldAPI_1__c * FieldAPI_2__c)/100&quot;
},
]</inlineHelpText>
        <label>Field Formula Configuration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_Specific_Value__c</fullName>
        <inlineHelpText>Mention Document Name configured on Program Document object record</inlineHelpText>
        <label>Field Specific Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field_Type__c</fullName>
        <label>Field Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>As per Field</fullName>
                    <default>true</default>
                    <label>As per Field</label>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Text Area</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Blank</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Multiselect</fullName>
                </value>
                <value>
                    <fullName>Lookup</fullName>
                </value>
                <value>
                    <fullName>Static Content</fullName>
                </value>
                <value>
                    <fullName>Table</fullName>
                </value>
                <value>
                    <fullName>Document upload table</fullName>
                </value>
                <value>
                    <fullName>Multiple Table</fullName>
                </value>
                <value>
                    <fullName>Latitude</fullName>
                </value>
                <value>
                    <fullName>Longitude</fullName>
                </value>
                <value>
                    <fullName>User Defined Picklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Filter_Document_Types__c</fullName>
        <label>Filter Document Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <label>Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hide_Field_API_Name__c</fullName>
        <label>Hide Field API Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hide_Field_Custom_Attribute__c</fullName>
        <inlineHelpText>{
	&quot;AttributeKey&quot;: &quot;role&quot;,
	&quot;AttributeValue&quot;: &quot;FEMA Programmatic Analyst, FEMA EHP Analyst&quot;,
	&quot;operation&quot;: &quot;IN&quot;
}</inlineHelpText>
        <label>Hide Field Custom Attribute</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hide_Field_Operator__c</fullName>
        <label>Hide Field Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Equal</fullName>
                    <default>true</default>
                    <label>Equal</label>
                </value>
                <value>
                    <fullName>Not Equal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hide_Field_Value__c</fullName>
        <label>Hide Field Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Read_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Length__c</fullName>
        <label>Max Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Value_Configuration__c</fullName>
        <inlineHelpText>{
&quot;fields&quot;: &quot;Maximum_Eligible_Management_Cost__c&quot;,
&quot;maxValue&quot;: 0,
&quot;maxValueFormula&quot;:&quot;Maximum_Eligible_Management_Cost__c&quot;,
&quot;errorMessage&quot;: &quot;This line item causes the total Management Cost Requested to exceed the Maximum Management Cost Allowed. You cannot request more than the Maximum Management Cost Allowed&quot;
}</inlineHelpText>
        <label>Maximum Value Configuration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Minimum_Value_Configuration__c</fullName>
        <inlineHelpText>{
&quot;fields&quot;: &quot;Total_Project_Cost__c&quot;,
&quot;minValue&quot;: 0,
&quot;minValueFormula&quot;:&quot;25 * Total_Project_Cost__c / 100&quot;,
&quot;errorMessage&quot;: &quot;Non-Federal Cost Share(Match) Percentage should not be less than 25%&quot;
}</inlineHelpText>
        <label>Minimum Value Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Multiple_Table_Query__c</fullName>
        <description>Query to get the no. of project cost.</description>
        <label>Multiple Table Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Page_Section__c</fullName>
        <label>Page Section</label>
        <referenceTo>Page_Section__mdt</referenceTo>
        <relationshipLabel>Page Fields</relationshipLabel>
        <relationshipName>Page_Fields</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Placeholder__c</fullName>
        <label>Placeholder</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_To_Object_Name__c</fullName>
        <label>Related To Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Search_Class_Name__c</fullName>
        <label>Search Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Static_Content__c</fullName>
        <label>Static Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Table_Additional_Config__c</fullName>
        <label>Table Additional Config</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Table_Columns__c</fullName>
        <label>Table Columns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Table_Name__c</fullName>
        <label>Table Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Table_Object__c</fullName>
        <label>Table Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_Parent_Relationship_Field_API__c</fullName>
        <label>Table Parent Relationship Field API</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Table_Record_Limit__c</fullName>
        <label>Table Record Limit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                    <default>true</default>
                    <label>5</label>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Table_Where_Clause__c</fullName>
        <label>Table Where Clause</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Defined_Picklist_Values__c</fullName>
        <inlineHelpText>[{&quot;label&quot;: &quot;xyz&quot;, value:&quot;xyz&quot;},
{&quot;label&quot;: &quot;PQR&quot;, value:&quot;PQR&quot;}]</inlineHelpText>
        <label>User Defined Picklist Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Error_Message__c</fullName>
        <label>Validation Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Pattern__c</fullName>
        <label>Validation Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Page Field</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>Sequence__c</columns>
        <columns>MasterLabel</columns>
        <columns>Display_Label__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Field_Type__c</columns>
        <columns>Page_Section__c</columns>
        <columns>DeveloperName</columns>
        <columns>Required__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <pluralLabel>Page Fields</pluralLabel>
</CustomObject>